Создал методы перевода денег игроку и вывода игроков по id комнаты
